testData/commands/errors/parent/test_ownerOnly.ts
import { defineCommand } from "../../../../definitions";

export default defineCommand({
    key: "test_ownerOnly",
    ownerOnly: false
});
